name:                hiljusti-fiddles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hiljusti/hiljusti-fiddles#readme
license:             BSD3
license-file:        LICENSE
author:              J.R. Hill
maintainer:          hiljusti@pm.me
copyright:           WTFPL
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hiljusti-fiddles
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
